aby has el maldito reporte

--- a/src/app/components/catalogo/catalogo/catalogo.html
+++ b/src/app/components/catalogo/catalogo/catalogo.html
@@ -3,7 +3,7 @@
 </header>
 <section>
     @for (p of products;track p.id) {
-    <app-producto-card [product]="p">
-    </app-producto-card>
+    <app-product-card [product]="p">
+    </app-product-card>
     }
 </section>
