--- a/src/app/components/catalogo/product-card/product-card.html
+++ b/src/app/components/catalogo/product-card/product-card.html
@@ -1,11 +1,12 @@
-<article>
-    <img [src]="product.URLImg" [alt]="product.nombre" />
-    <div>
-        <div>
-            <h3>{{product.nombre}}</h3>
-            <span>{{product.precio}}</span>
+<article class="card">
+    <img class="img" [src]="product.URLImg" [alt]="product.nombre" />
+    <div class="body">
+        <div class="top">
+            <h3 class="title">{{product.nombre}}</h3>
+            <span class="price">${{product.precio}}</span>
         </div>
-        <p>{{product.autor}}</p>
-        <p>{{product.resolucion}}</p>
+        <p class="author">Artista: {{product.autor}}</p>
+        <p class="res">{{product.resolucion}}</p>
+        <button class="btn">Agregar</button>
     </div>
 </article>
